syntax = "proto3";

package order;

service OrderDatabaseService {
    rpc SaveOrder (SaveOrderRequest) returns (SaveOrderResponse);
    rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
    rpc DeleteOrder (DeleteOrderRequest) returns (DeleteOrderResponse);
}

message SaveOrderRequest {
    string user_id = 1;
    string product_id = 2;
    int32 quantity = 3;
    float price = 4;
}

message SaveOrderResponse {
    string order_id = 1;
    string message = 2;
}

message GetOrderRequest {
    string order_id = 1;
}

message GetOrderResponse {
    string order_id = 1;
    string user_id = 2;
    string product_id = 3;
    int32 quantity = 4;
    float price = 5;
}

message DeleteOrderRequest {
    string order_id = 1;
}

message DeleteOrderResponse {
    string message = 1;
}